--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+body {
+  background-color: #DBF0F7;
+}
+/*p {
+  color: #4D6656;
+}*/
+
+sub {
+  font-size: 1rem!important;
+}
+
 code {
   padding: 1rem!important;
 }
@@ -5,4 +16,24 @@ code {
 img {
   border: none!important;
   box-shadow: none!important;
+}
+
+mark {
+  background-color: #D1FFB3;
+}
+
+#acc {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  font-size: 10rem;
+  color: rgba(255, 0, 0, .7);
+  font-variant: small-caps;
+}
+
+#timer {
+  /*background: transparent;*/
+  /*display: none;*/
+  /*height: 100%;*/
+  /*width: 100%;*/
 }
