--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 body {
   background: rgba(0,0,255,.5);
 }
+
+#app {
+  box-shadow: 10px 5px 5px green;
+}
+
+h1 {
+  & b {
+    color: red;
+  }
+}
